--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,27 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.custom-shape-divider-top-1758140629 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1758140629 svg {
+  position: relative;
+  display: block;
+  width: calc(300% + 1.3px);
+  height: 150px;
+}
+
+.custom-shape-divider-top-1758140629 .shape-fill {
+  fill: #FFFFFF;
+}
+
 .custom-shape-divider-bottom-1758140629 {
     position: absolute;
     bottom: 0;
